--- a/style.css
+++ b/style.css
@@ -4,6 +4,19 @@
     font-family: roboto;
 }
 body {
-    background-color:#0f0f0f
+    background-color:#0f0f0f;
+    color : white;
 }
 
+.navbar{
+    padding: 0px 16px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; 
+}
+
+.nav-left{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
