--- a/style.css
+++ b/style.css
@@ -20,3 +20,18 @@ body {
     flex-direction: row;
     justify-content: space-evenly;
 }
+
+.nav-center{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+
+.search-button{
+    background-color: #272727;
+}
+
+svg{
+    margin-top: 0.2rem;
+}
